--- a/NewWeb/index.html
+++ b/NewWeb/index.html
@@ -108,14 +108,14 @@
               <a href = "https://github.com/Justin1095" target = "_blank"  alt ="Github" title ="Github">    
               <i class = "fa fa-github fa-3x"></i></a>
 
-              <a href = "https://www.instagram.com/justin_seda/" target = "_blank" alt ="Instagram"  title = "Instagram">  
-			  <i class = "fab fa-instagram fa-3x"></i></a> 
-
               <a href = "https://www.facebook.com/justin.seda.1" target = "_blank" alt ="Facebook"  title = "Facebook">  
               <i class = "fab fa-facebook-square fa-3x"></i></a> 
+
+              <a href = "https://www.instagram.com/justin_seda/" target = "_blank" alt ="Instagram"  title = "Instagram">  
+			  <i class = "fab fa-instagram fa-3x"></i></a> 
          
-             <a href = "mailto:jseda1@live.esu.edu" target = "_blank" alt ="College Email" title= "College Email" > 
-             <i class = "fa fa-envelope fa-3x"></i></a> 
+             <!--<a href = "mailto:jseda1@live.esu.edu" target = "_blank" alt ="College Email" title= "College Email" > 
+             <i class = "fa fa-envelope fa-3x"></i></a>-->
 
              <a href = "mailto:jseda3237@gmail.com" target = "_blank" alt ="Gmail" title= "Gmail" > 
              <i class = "fa fa-envelope-o fa-3x"></i></a> 
