Updated description and picture
Updated description and profile picture

--- a/NewWeb/index.html
+++ b/NewWeb/index.html
@@ -71,7 +71,7 @@
             
             <h2 id = "aboutme" class="h2 text-white mb-4">About Me</h2>
 
-            <p class="text-white-50">Determined and dedicated student enrolled at East Stroudsburg University studying Computer Science and Computer Security with a minor in Mathematics. Experience with programming languages such as Java, C# and C++, as well as educated in different aspect of programming techniques.</p>
+            <p class="text-white-50">Determined and dedicated graduate of East Stroudsburg University with a bachelors in Computer Science, Computer Security and a minor in Mathematics. Experience with programming languages such as Java, C# and C++, as well as educated in different aspect of programming techniques.</p>
              <a target = "_blank" > <img src = "img/myface2.jpg" alt ="My Picture" title = "Hi, I'm Justin"usemap = "#site" id = "image" > </a>
           </div>
         </div>
