Removed NewWeb folder
Removed NewWeb folder

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             <center>
               <h2 class = "mb-4"  style=" text-align: left; margin-top: 5%; text-decoration: underline;">Resume</h2>
               
-                 <!--<embed src="resume/jsedaResume.pdf" width="100%" height="550" type = "application/pdf"  align ="center"/>-->
-                 <object data="resume/jsedaResume.pdf" type="application/pdf" width="100%" height="550">
+                 <embed src="resume/jsedaResume.pdf" width="100%" height="550" type = "application/pdf"  align ="center"/>
+                 <!--<object data="resume/jsedaResume.pdf" type="application/pdf" width="100%" height="550">
 					<p>Oops! Your browser doesn't support PDFs! </p> 
 					<a href="resume/jsedaResume.pdf"> Download Instead</a></p>
-				</object>
+				</object>-->
               
             </center>
           </div>
