--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 							<p class="text-white-50">
 								Determined and dedicated graduate of East Stroudsburg University
 								with a bachelor’s in Computer Science, Computer Security, and a
-								minor in Mathematics. Experience with programming languages such
-								as JavaScript, Python, and C#, as well as educated in different
-								aspects of programming techniques.
+								minor in Mathematics. Experienced with programming languages
+								such as JavaScript, Python, and C#, as well as educated in
+								different aspects of programming techniques.
 							</p>
 							<a target="_blank">
 								<img
@@ -215,7 +215,7 @@
 					<a
 						href="https://www.deviantart.com/faxdoc/art/Stacking-houses-on-a-windy-day-559807830"
 						target="_blank"
-						title="faxdoc"
+						title="Stacking houses on a windy day"
 					>
 						Stacking houses on a windy day</a
 					>
@@ -226,6 +226,14 @@
 						title="faxdoc"
 						>faxdoc</a
 					>
+					<br />
+					<a
+						href="https://creativecommons.org/licenses/by-nc-nd/3.0/legalcode"
+						target="_blank"
+						title="license"
+						>License</a
+					>
+					to use image. Only change was adding a title/name
 				</p>
 			</div>
 			<a href="#" class="scrollToTop" target="_blank">
